Add script to home page
Add links to category items in order to redirect according page.
Add sliding banner which switch every 3 seconds.

Comment out importing script in tempate, restaurant and favorite HTML page.

--- a/restaurant-list.html
+++ b/restaurant-list.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="styles/restaurant-list.css" />
   <title>Drive thru app</title>
-  <script defer src="scripts/index.js"></script>
+  <!-- <script defer src="scripts/index.js"></script> -->
 </head>
 
 <body>
