--- a/favorites.html
+++ b/favorites.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/template.css" />
   <link rel="stylesheet" type="text/css" href="styles/favorites.css" />
   <title>Drive thru app</title>
-  <script defer src="scripts/index.js"></script>
+  <!-- <script defer src="scripts/index.js"></script> -->
 </head>
 
 <body>
