--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" type="text/css" href="styles/template.css" />
     <title>Drive thru app</title>
-    <script defer src="scripts/index.js"></script>
+    <!-- <script defer src="scripts/index.js"></script> -->
   </head>
   <body>
     <header class="header">
